SLING-12918 Update to Parent 66